@startuml

title __WEBSERVICES's Class Diagram__\n

  namespace cz.utb.thesisapp {
    namespace services {
      namespace webServices {
        class cz.utb.thesisapp.services.webServices.RestApi {
            ~ df : SimpleDateFormat
            {static} - TAG : String
            - mQueue : RequestQueue
            - service : Service
            - token : String
            - url : String
            + RestApi()
            + apiHandler()
            + sendClient()
            + sendTouch()
            + startRestApi()
            + stop()
        }
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace services {
      namespace webServices {
        class cz.utb.thesisapp.services.webServices.Sse {
            ~ df : SimpleDateFormat
            ~ listener : Listener
            {static} - TAG : String
            - okSse : OkSse
            - request : Request
            - sse : ServerSentEvent
            + Sse()
            + start()
            + stop()
        }
      }
    }
  }
  

  cz.utb.thesisapp.services.webServices.RestApi o-- cz.utb.thesisapp.services.Broadcast : broadcast
  cz.utb.thesisapp.services.webServices.Sse o-- cz.utb.thesisapp.services.Broadcast : broadcast
  cz.utb.thesisapp.services.webServices.Sse o-- cz.utb.thesisapp.services.MyService : myService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
